@@ -244,6 +244,8 @@ Release 0.22.0 - Unreleased
 
     HDFS-1947. DFSClient should use mapreduce.task.attempt.id. (eli)
 
+    HDFS-1957. Add documentation for HFTP. (Ari Rabkin via todd)
+
   OPTIMIZATIONS
 
     HDFS-1140. Speedup INode.getPathComponents. (Dmytro Molkov via shv)
